--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
   "forwardPorts": [8888],
   
   // Use 'postCreateCommand' to run commands after the container is created.
-   "postCreateCommand": "python3 -m pip install --user -r requirements.txt",
+   "postCreateCommand": "sudo apt-get update && sudo apt-get install -y python3-pydot graphviz && python3 -m pip install --user -r requirements.txt",
   // "postStartCommand": "python3 -m venv venv && . venv/bin/activate && pip install -r requirements_qiskit_ibm_quantum.txt && python -m ipykernel install --user --name=qiskit_runtime_env --display-name='Qiskit Runtime' && python3 -m jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token=''",
   "postStartCommand": "./startup.sh",
   // Configure tool-specific properties.
